# cpp_abs_map_poc

./: .editorconfig  LICENSE  README.md
src/include/: generic_iter.h  map_iter.hpp
src/test/: CMakeLists.txt  main.cpp
src/test/benchmark/: CMakeLists.txt  benchmark_generic_iter.cpp  benchmark_normal_iter.cpp
src/test/include/: array_container.hpp  map_container.hpp
